# chemfit

./: .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  build_docs.sh  noxfile.py  pyproject.toml
.github/workflows/: pypi.yml
docs/: conf.py  index.rst  requirements.txt
docs/src/: installation.rst  usage.rst
docs/src/api/: chemfit.abstract_objective_function.rst  chemfit.ase_objective_function.rst  chemfit.combined_objective_function.rst  chemfit.data_utils.rst  chemfit.debug_utils.rst  chemfit.exceptions.rst  chemfit.fitter.rst  chemfit.kabsch.rst  chemfit.mpi_wrapper_cob.rst  chemfit.multi_energy_objective_function.rst  chemfit.plot_utils.rst  chemfit.rst  chemfit.scme_factories.rst  chemfit.scme_setup.rst  chemfit.utils.rst  modules.rst  scme_fitting.ase_objective_function.rst  scme_fitting.combined_objective_function.rst  scme_fitting.data_utils.rst  scme_fitting.fitter.rst  scme_fitting.mpi_wrapper_cob.rst  scme_fitting.multi_energy_objective_function.rst  scme_fitting.plot_utils.rst  scme_fitting.rst  scme_fitting.scme_factories.rst  scme_fitting.scme_objective_function.rst  scme_fitting.scme_setup.rst  scme_fitting.utils.rst
docs/src/development/: development.rst
docs/src/usage/: abstract_interface.rst  ase_objective_function_api.rst  combined_objective_function.rst  example_scme.rst  fitter.rst  fitting.rst  general.rst  mpi.rst  objective_functions.rst  overview.rst
paper/: paper.md
src/chemfit/: abstract_objective_function.py  analysis.py  ase_objective_function.py  combined_objective_function.py  data_utils.py  debug_utils.py  exceptions.py  fitter.py  mpi_wrapper_cob.py  multi_energy_objective_function.py  plot_utils.py  scme_factories.py  scme_setup.py  utils.py
src/scme_fitting/: ase_objective_function.py  combined_objective_function.py  data_utils.py  dimer_distance_objective_function.py  fitter.py  mpi_utils.py  mpi_wrapper_cob.py  multi_energy_objective_function.py  plot_utils.py  scme_energy_objective_function.py  scme_factories.py  scme_objective_function.py  scme_setup.py  sequential_executor.py  utils.py
tests/: conftest.py  test_factory_exceptions.py  test_fitter.py  test_kabsch.py  test_lj.py  test_meta_data.py  test_scme_fitter.py  test_utils.py
tests/test_configurations_scme/: atoms_2.4.xyz  atoms_2.5.xyz  atoms_2.6.xyz  atoms_2.7.xyz  atoms_2.8.xyz  atoms_2.9.xyz  atoms_3.0.xyz  atoms_3.1.xyz  atoms_3.2.xyz  atoms_3.3.xyz  atoms_3.4.xyz  atoms_3.5.xyz  atoms_3.6.xyz  atoms_3.7.xyz  atoms_3.8.xyz  atoms_3.9.xyz  atoms_4.0.xyz  atoms_4.1.xyz  atoms_4.2.xyz  atoms_4.3.xyz  atoms_4.4.xyz  atoms_4.5.xyz  atoms_4.6.xyz  atoms_4.7.xyz  atoms_4.8.xyz  atoms_4.9.xyz  atoms_5.0.xyz  energies.csv  energies2.csv
