[project]
name = "chemfit"
description = "A package to support fitting the parameters potentials described by an ASE calculator."
version = "2.2.0"
dependencies = [
    "numpy",
    "ase",
    "nevergrad",
    "pandas",
    "matplotlib",
    "pydictnest",
]
requires-python = ">= 3.9"
authors = [{ name = "Moritz Sallermann", email = "mos19@hi.is" }]
license-files = ["LICEN[CS]E*"]

[project.urls]
Repository = "https://github.com/MSallermann/chemfit"

[project.optional-dependencies]
build_docs = ["sphinx", "furo", "sphinxcontrib-napoleon", "sphinx-autobuild"]
mpi = ["mpi4py"]
