[project]
name = "chemfit"
description = "A package to support fitting the parameters potentials described by an ASE calculator."
version = "2.3.0"
dependencies = [
    "numpy",
    "ase",
    "nevergrad",
    "pandas",
    "matplotlib",
    "pydictnest",
]
requires-python = ">= 3.9"
authors = [{ name = "Moritz Sallermann", email = "mos19@hi.is" }]
license-files = ["LICEN[CS]E*"]

[project.urls]
Repository = "https://github.com/MSallermann/chemfit"

[project.optional-dependencies]
build_docs = ["sphinx", "furo", "sphinxcontrib-napoleon", "sphinx-autobuild"]
mpi = ["mpi4py"]

[tool.ruff.lint]
select = ['ALL']
ignore = [
    'PLR2004', # "magic" values
    'S101',    # because we'r using assert in pytest
    'D100',    # not every module needs a docstring
    'D101',    # Missing docstring in public class
    'D102',    # missing docstring in public method
    'D103',    # missing docstring in public function
    'ANN201',  # return type annotation
    'ANN202',  # return type annotation
    'ERA001',  # commented out code
    'INP001',  # implicit namespace
    'T201',    # `print`
    'COM812',  # missing trailing comma
    'TRY',     # lots of noise
    'E501',    # line too long (handled by formatter)
]
